--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,25 +36,41 @@ android {
 
 dependencies {
 
+    //noinspection GradleDependency
     implementation 'androidx.core:core-ktx:1.7.0'
+    //noinspection GradleDependency
     implementation 'androidx.appcompat:appcompat:1.4.1'
+    //noinspection GradleDependency
     implementation 'com.google.android.material:material:1.6.0'
+    //noinspection GradleDependency
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'de.hdodenhof:circleimageview:3.1.0'
-    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.24'
-    implementation 'com.hbb20:ccp:2.6.0'
-    implementation 'com.google.firebase:firebase-analytics-ktx:21.0.0'
-    implementation platform('com.google.firebase:firebase-bom:30.0.1')
-    implementation 'com.google.firebase:firebase-auth-ktx'
-    implementation 'com.mikhaellopez:biometric:1.1.0'
-    implementation 'androidx.biometric:biometric:1.2.0-alpha04'
-    implementation 'dev.skomlach:biometric:2.0.99'
-    implementation 'me.relex:circleindicator:2.1.6'
-    implementation 'com.github.bumptech.glide:glide:4.13.2'
-    implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.hbb20:ccp:2.6.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    // Image
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.24'
+
+    // Country Code Picker
+    implementation 'com.hbb20:ccp:2.6.0'
+
+    // Firebase
+    implementation 'com.google.firebase:firebase-analytics-ktx:21.0.0'
+    implementation platform('com.google.firebase:firebase-bom:30.0.1')
+    implementation 'com.google.firebase:firebase-auth-ktx'
+
+    // Fingerprint check
+    implementation 'com.mikhaellopez:biometric:1.1.0'
+    implementation 'androidx.biometric:biometric:1.2.0-alpha04'
+    implementation 'dev.skomlach:biometric:2.0.99'
+
+    // connect page on viewPager
+    implementation 'me.relex:circleindicator:2.1.6'
+
+    // Load image from links
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
+
+    // CardView
+    implementation 'androidx.cardview:cardview:1.0.0'
 }
