--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,8 @@ dependencies {
 
     // CardView
     implementation 'androidx.cardview:cardview:1.0.0'
+
+    // RecyclerView
+    implementation 'androidx.recyclerview:recyclerview:1.3.0-alpha02'
+    implementation 'androidx.recyclerview:recyclerview-selection:1.2.0-alpha01'
 }
