--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,10 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    buildFeatures {
+        viewBinding = true
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -77,4 +81,7 @@ dependencies {
     // RecyclerView
     implementation 'androidx.recyclerview:recyclerview:1.3.0-alpha02'
     implementation 'androidx.recyclerview:recyclerview-selection:1.2.0-alpha01'
+
+    // ViewBinding
+    implementation 'androidx.databinding:viewbinding:7.2.1'
 }
